# Git-Roaster

./: README.md  pyproject.toml
src/: .env.example  main.py  requirements.txt  roaster.py
src/helpers/: cli_setup.py  config.py  get_config_path.py  settings.py  setup.py
src/llms/: LLMInterface.py  LLMProviderFactory.py
src/llms/providers/: GroqProvider.py  OpenAIProvider.py
src/models/enums/: GithubEventEnum.py  LLMEnum.py
src/models/schemas/: prompts.py
src/services/: data_builder.py  github_service.py  llm_service.py
